discussion/kv_engine/169459/169459_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50564: Only use "CA file" as the verify locations

Memcached behaved differently than the other services
in the way that we returned the full certificate chain
as trusted CA list and would also allow for clients
to connect if the certificate was signed by one of
the certificates in the chain.

This patch change the logic to be identical to
the other services so that only the certificates in
the "CA file" in the configuration gets reported
back to the client during the handshake, and only
the "CA file" is used for verification.

Change-Id: I0bda90c2d0ee39137352731db1668d0f55b6e5cd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-01-26 08:10:48.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-26 08:24:35.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43296/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36584/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36584/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17146/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17146/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17903/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17903/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4781/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16830/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15946/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15946/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4843/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4843/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25246/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15132/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:335:27: error: "boost::filesystem::path" is an incomplete type [clang-diagnostic-error]
    const auto certfile = boost::filesystem::path(OBJECT_ROOT) / "tests" /
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/dirutils.h:24:7: note: forward declaration of "boost::filesystem::path"
class path;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:352:25: error: "boost::filesystem::path" is an incomplete type [clang-diagnostic-error]
    const auto cafile = boost::filesystem::path(OBJECT_ROOT) / "tests" /
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/dirutils.h:24:7: note: forward declaration of "boost::filesystem::path"
class path;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15132/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_cert_tests.cc:335:27:
error: "boost::filesystem::path" is an incomplete type [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15132/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13977/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
